--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.Driver = org.h2.Driver
-spring.jpa.show.sq = true
+spring.datasource.url=jdbc:postgresql://localhost/kaeo
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show.sql = true
 spring.jpa.properties.hibernate.format_sql = true
-spring.security.user.name=devuser
-spring.security.user.pass=pass
